# sloplint

./: makefile  pyproject.toml  readme.md
.github/workflows/: deploy.yml  release.yml
samples/: chatgpt-20260411-black-holes.md  claude-sonnet-4.6-20260411-black-holes.md  gemini-20260411-blank-holes.md
sloplint/: __init__.py  cli.py  lint.py
tests/: test_sloplint.py
