[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sloplint"
version = "0.4.0"
description = "A linter to detect AI-generated markdown prose"
readme = "readme.md"
authors = [
    { name = "Jon Craton", email = "jncraton@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sloplint = "sloplint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sloplint"]
