[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sloplint"
version = "0.4.1"
description = "A linter to detect AI-generated markdown prose"
readme = "readme.md"
authors = [
    { name = "Jon Craton", email = "jncraton@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[project.scripts]
sloplint = "sloplint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sloplint"]
